--- a/OperationUsingThreads.vcxproj.filters
+++ b/OperationUsingThreads.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="BasicTimer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SumFinder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BasicTimer.h">
+    <ClInclude Include="SumFinder.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Core.h">
+    <ClInclude Include="Core.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BasicTimer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
