--- a/OperationUsingThreads.vcxproj.filters
+++ b/OperationUsingThreads.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="DataGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Core.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SumFinder.hpp">
